--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,10 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+.subhead {
+  font-size: 20px;
+  padding-bottom: 30px;
+}
 .calculator {
   display: flex;
   flex-direction: column;
@@ -43,6 +47,7 @@ body {
 .answer {
   display: flex;
   padding: 5px;
+  font-size: 25px;
 }
 .buttons {
   width: 250px;
